[project]
name = "pyvcontrol"
version = "1.8.0"
description = "Communication with Viessmann heating via Optolink interface."
readme = "README.md"
authors = [
    { name = "Jochen Schmähling", email = "j_ochen_573@freenet.de" }
]
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pyvcontrol-example = "pyvcontrol.example:write_read"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
